<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_dashboard"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/nav_dashboard" />
        <item
            android:id="@+id/drawer_alerts"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/nav_alerts" />
        <item
            android:id="@+id/drawer_contacts"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/nav_contacts" />
        <item
            android:id="@+id/drawer_history"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="Incident History" />
        <item
            android:id="@+id/drawer_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/drawer_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/btn_support" />
        <item
            android:id="@+id/drawer_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/btn_about" />
        <item
            android:id="@+id/drawer_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/nav_logout" />
    </group>
</menu>
